--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-infinite-scroll-component": "^6.1.0"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.11.0",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/ms": "^0.7.31",
+    "@types/node": "^18.16.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "simple-zustand-devtools": "^1.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
